--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,10 @@
 .app {
   text-align: center;
+  width: 100%;
+  max-width: 2200px;
+  background-color: #eee;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(12, 1fr);
 }
