--- a/src/components/navigation-bar/navigation-bar.scss
+++ b/src/components/navigation-bar/navigation-bar.scss
@@ -1,3 +1,19 @@
+$navbar-color: #dbdbdb;
+$navbar-background-color: #234475;
+
 .navbar-container {
   grid-row: 1/2;
+  background-color: $navbar-background-color;
+}
+
+.navbar-link {
+  font-family: 'Roboto';
+  font-size: 1.2em;
+  font-weight: 400;
+  color: $navbar-color;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+
+  &:active {
+    color: rgb(226, 133, 3);
+  }
 }
