--- a/src/app.scss
+++ b/src/app.scss
@@ -4,6 +4,7 @@
   max-width: 2200px;
   background-color: #eee;
   height: 100%;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(12, 1fr);
