--- a/src/components/navigation-bar/navigation-bar.scss
+++ b/src/components/navigation-bar/navigation-bar.scss
@@ -4,16 +4,49 @@ $navbar-background-color: #234475;
 .navbar-container {
   grid-row: 1/2;
   background-color: $navbar-background-color;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  padding: 1em 1em;
+}
+
+.navbar-menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.navbar-menu-item {
+  margin-left: 1.5em;
+
+  &:first-child {
+    margin-left: 0;
+  }
 }
 
 .navbar-link {
   font-family: 'Roboto';
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-weight: 400;
   color: $navbar-color;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 
   &:active {
     color: rgb(226, 133, 3);
+  }
+}
+
+.site-art img {
+  animation: rotator 20s forwards infinite;
+  animation-delay: 10s;
+  animation-timing-function: linear;
+}
+
+@keyframes rotator {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
