--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,4 @@
-$footer-color: #fff8e8;
+$footer-color: aliceblue;
 $footer-background-color: #234475;
 
 .footer-container {
@@ -8,6 +8,7 @@ $footer-background-color: #234475;
   display: grid;
   grid-template-columns: 1fr auto;
   padding: 1em 1em;
+  font-size: 0.7em;
 }
 
 .footer-social {
@@ -18,7 +19,12 @@ $footer-background-color: #234475;
 .footer-social-container {
   display: flex;
   align-items: center;
-  grid-column: span 4;
+  grid-column: span 3;
+}
+
+.footer-copy {
+  display: flex;
+  align-items: center;
 }
 
 .footer-link {
@@ -31,5 +37,45 @@ $footer-background-color: #234475;
     border-radius: 50%;
     height: 20px;
     margin-right: 0.2em;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .footer-container {
+    font-size: 0.9em;
+  }
+
+  .footer-social-container {
+    grid-column: span 3;
+  }
+}
+
+@media screen and (min-width: 720px) {
+  .footer-container {
+    font-size: 1em;
+  }
+
+  .footer-social-container {
+    grid-column: span 2;
+  }
+}
+
+@media screen and (min-width: 1020px) {
+  .footer-container {
+    font-size: 1.1em;
+  }
+
+  .footer-social-container {
+    grid-column: span 2;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    font-size: 1em;
+  }
+
+  .footer-social-container {
+    grid-column: span 1;
   }
 }
