add responsive desktop styles

--- a/src/components/navigation-bar/navigation-bar.scss
+++ b/src/components/navigation-bar/navigation-bar.scss
@@ -62,4 +62,11 @@ $navbar-background-color: #234475;
   .navbar-container {
     font-size: 1em;
   }
+  .navbar-menu-item {
+    margin-left: 1em;
+
+    &:first-child {
+      margin-left: 0;
+    }
+  }
 }
