--- a/src/app.scss
+++ b/src/app.scss
@@ -13,3 +13,17 @@
 .route-container {
   grid-row: 2 / 12;
 }
+
+@media screen and (min-width: 720px) {
+  .route-container {
+    width: 80%;
+    margin: 0 10%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .route-container {
+    width: 70%;
+    margin: 0 15%;
+  }
+}
