--- a/src/components/formel-diller/formel-diller.scss
+++ b/src/components/formel-diller/formel-diller.scss
@@ -1,1 +1,78 @@
+.formel-diller-title {
+  margin-top: 0.5em;
+  font-size: 2em;
+  color: #222;
+  text-shadow: 1px 1px 1px #fff;
+}
+.index {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
 
+.formel-diller-content {
+  display: flex;
+  flex-direction: column;
+  margin: 1.5em 0;
+}
+
+.table-of-contents {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5em;
+  a {
+    color: #222;
+    &:visited,
+    &:active {
+      color: #222;
+    }
+    &:hover {
+      color: rgb(230, 126, 78);
+    }
+  }
+}
+
+.notes {
+  width: 100%;
+  max-width: 370px;
+  align-self: center;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+  }
+}
+.notes-paragraph {
+  margin-bottom: 1em;
+  margin-left: 5%;
+  margin-right: 5%;
+  text-align: left;
+}
+
+@media screen and (min-width: 480px) {
+  .notes {
+    max-width: 470px;
+  }
+
+  .notes-paragraph {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 720px) {
+  .notes {
+    max-width: 700px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .notes {
+    max-width: 950px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .notes {
+    max-width: 1200px;
+  }
+}
