--- a/src/app.scss
+++ b/src/app.scss
@@ -7,11 +7,10 @@
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(12, 1fr);
+  grid-template-rows: auto 1fr auto;
 }
 
 .route-container {
-  grid-row: 2 / 12;
 }
 
 @media screen and (min-width: 720px) {
